<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.cwd.fbook.view.InputView
        android:id="@+id/login_inputView_userName"
        style="@style/FillTheWidth"
        app:inputLabel="@string/username"/>

    <com.cwd.fbook.view.InputView
        android:id="@+id/login_inputView_password"
        android:layout_marginTop="@dimen/Dist6"
        style="@style/FillTheWidth"
        app:inputLabel="@string/password"/>

    <TextView
        android:id="@+id/login_view_login"
       style="@style/TextButton"
        android:layout_marginTop="@dimen/Dist6"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/login_view_register"
        style="@style/MediumText"
        android:layout_marginTop="@dimen/Dist6"
        android:text="@string/create_new_account"/>

</LinearLayout>