<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/password_view_content"
    style="@style/InfoView"
    android:padding="@dimen/Dist4">

    <com.cwd.fbook.view.InputView
        android:id="@+id/password_inputView_username"
        style="@style/FillTheWidth"
        android:inputType="textPersonName"
        app:inputLabel="@string/username" />

    <com.cwd.fbook.view.InputView
        android:id="@+id/password_inputView_password"
        style="@style/FillTheWidth"
        android:layout_marginTop="@dimen/Dist6"
        android:inputType="textPassword"
        app:inputLabel="@string/password" />

    <com.cwd.fbook.view.InputView
        android:id="@+id/password_inputView_retypePassword"
        style="@style/FillTheWidth"
        android:layout_marginTop="@dimen/Dist6"
        android:inputType="textPassword"
        app:inputLabel="@string/retype_password" />

</LinearLayout>